update with keras code
update with keras code

--- a/Zero_shot_Learning/Notebook/ZSL with Vision Transformer_20241230.ipynb
+++ b/Zero_shot_Learning/Notebook/ZSL with Vision Transformer_20241230.ipynb
@@ -477,17 +477,277 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6ed3336",
+   "cell_type": "markdown",
+   "id": "eafdb1c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 20250115\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "295bf6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import keras\n",
+    "from keras import layers, Model\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, cohen_kappa_score, confusion_matrix\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dd2a76eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define parameters\n",
+    "input_shape = (224, 224, 3)\n",
+    "patch_size = 16\n",
+    "num_patches = (input_shape[0] // patch_size) * (input_shape[1] // patch_size)\n",
+    "projection_dim = 64\n",
+    "transformer_layers = 4\n",
+    "num_heads = 4\n",
+    "transformer_units = [projection_dim * 2, projection_dim]\n",
+    "mlp_head_units = [2048, 1024]\n",
+    "num_classes = 10  # Update based on your dataset\n",
+    "\n",
+    "# Define the MLP block\n",
+    "def mlp(x, hidden_units, dropout_rate):\n",
+    "    for units in hidden_units:\n",
+    "        x = layers.Dense(units, activation=tf.nn.gelu)(x)\n",
+    "        x = layers.Dropout(dropout_rate)(x)\n",
+    "    return x\n",
+    "\n",
+    "# Define the patching layer\n",
+    "class Patches(layers.Layer):\n",
+    "    def __init__(self, patch_size):\n",
+    "        super().__init__()\n",
+    "        self.patch_size = patch_size\n",
+    "\n",
+    "    def call(self, images):\n",
+    "        batch_size = tf.shape(images)[0]\n",
+    "        patches = tf.image.extract_patches(\n",
+    "            images=images,\n",
+    "            sizes=[1, self.patch_size, self.patch_size, 1],\n",
+    "            strides=[1, self.patch_size, self.patch_size, 1],\n",
+    "            rates=[1, 1, 1, 1],\n",
+    "            padding=\"VALID\",\n",
+    "        )\n",
+    "        patch_dims = patches.shape[-1]\n",
+    "        patches = tf.reshape(patches, [batch_size, -1, patch_dims])\n",
+    "        return patches\n",
+    "\n",
+    "# Define the patch encoding layer\n",
+    "class PatchEncoder(layers.Layer):\n",
+    "    def __init__(self, num_patches, projection_dim):\n",
+    "        super().__init__()\n",
+    "        self.num_patches = num_patches\n",
+    "        self.projection = layers.Dense(units=projection_dim)\n",
+    "        self.position_embedding = layers.Embedding(\n",
+    "            input_dim=num_patches, output_dim=projection_dim\n",
+    "        )\n",
+    "\n",
+    "    def call(self, patches):\n",
+    "        positions = tf.range(start=0, limit=self.num_patches, delta=1)\n",
+    "        encoded = self.projection(patches) + self.position_embedding(positions)\n",
+    "        return encoded\n",
+    "\n",
+    "# Define the data augmentation block\n",
+    "data_augmentation = keras.Sequential(\n",
+    "    [\n",
+    "        layers.Normalization(),\n",
+    "        layers.Resizing(224, 224),\n",
+    "        layers.RandomFlip(\"horizontal\"),\n",
+    "        layers.RandomRotation(0.1),\n",
+    "    ],\n",
+    "    name=\"data_augmentation\",\n",
+    ")\n",
+    "\n",
+    "# Create the Vision Transformer model\n",
+    "def create_vit_classifier(num_classes):\n",
+    "    inputs = keras.Input(shape=input_shape)\n",
+    "    augmented = data_augmentation(inputs)\n",
+    "    patches = Patches(patch_size)(augmented)\n",
+    "    encoded_patches = PatchEncoder(num_patches, projection_dim)(patches)\n",
+    "\n",
+    "    for _ in range(transformer_layers):\n",
+    "        x1 = layers.LayerNormalization(epsilon=1e-6)(encoded_patches)\n",
+    "        attention_output = layers.MultiHeadAttention(\n",
+    "            num_heads=num_heads, key_dim=projection_dim, dropout=0.1\n",
+    "        )(x1, x1)\n",
+    "        x2 = layers.Add()([attention_output, encoded_patches])\n",
+    "        x3 = layers.LayerNormalization(epsilon=1e-6)(x2)\n",
+    "        x3 = mlp(x3, hidden_units=transformer_units, dropout_rate=0.1)\n",
+    "        encoded_patches = layers.Add()([x3, x2])\n",
+    "\n",
+    "    representation = layers.LayerNormalization(epsilon=1e-6)(encoded_patches)\n",
+    "    representation = layers.Flatten()(representation)\n",
+    "    representation = layers.Dropout(0.5)(representation)\n",
+    "    features = mlp(representation, hidden_units=mlp_head_units, dropout_rate=0.5)\n",
+    "    logits = layers.Dense(num_classes, activation=\"softmax\")(features)\n",
+    "    model = keras.Model(inputs=inputs, outputs=logits)\n",
+    "    return model\n",
+    "\n",
+    "# Function to plot training metrics\n",
+    "def plot_training_metrics(history, save_path):\n",
+    "    acc = history.history['accuracy']\n",
+    "    val_acc = history.history['val_accuracy']\n",
+    "    loss = history.history['loss']\n",
+    "    val_loss = history.history['val_loss']\n",
+    "\n",
+    "    epochs = range(1, len(acc) + 1)\n",
+    "\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.plot(epochs, acc, label='Training Accuracy')\n",
+    "    plt.plot(epochs, val_acc, label='Validation Accuracy')\n",
+    "    plt.title('Accuracy')\n",
+    "    plt.legend()\n",
+    "\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.plot(epochs, loss, label='Training Loss')\n",
+    "    plt.plot(epochs, val_loss, label='Validation Loss')\n",
+    "    plt.title('Loss')\n",
+    "    plt.legend()\n",
+    "\n",
+    "    plt.savefig(save_path)\n",
+    "    plt.close()\n",
+    "\n",
+    "# Function to train and save checkpoints\n",
+    "def train_vit(train_dir, test_dir, num_classes, batch_size=32, epochs=10, model_path=\"vit_model.h5\"):\n",
+    "    train_gen = ImageDataGenerator(rescale=1.0 / 255).flow_from_directory(train_dir, \n",
+    "                                                                          target_size=input_shape[:2], \n",
+    "                                                                          batch_size=batch_size, \n",
+    "                                                                          class_mode=\"categorical\"\n",
+    "                                                                         )\n",
+    "    test_gen = ImageDataGenerator(rescale=1.0 / 255).flow_from_directory(test_dir, \n",
+    "                                                                         target_size=input_shape[:2], \n",
+    "                                                                         batch_size=batch_size, \n",
+    "                                                                         class_mode=\"categorical\"\n",
+    "                                                                        )\n",
+    "\n",
+    "    model = create_vit_classifier(num_classes)\n",
+    "    model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "    checkpoint_cb = keras.callbacks.ModelCheckpoint(\n",
+    "        \"checkpoint_epoch_{epoch:02d}.h5\", save_best_only=True, monitor=\"val_loss\"\n",
+    "    )\n",
+    "    history = model.fit(\n",
+    "        train_gen, validation_data=test_gen, epochs=epochs, callbacks=[checkpoint_cb]\n",
+    "    )\n",
+    "    model.save(model_path)\n",
+    "    plot_training_metrics(history, \"training_metrics.png\")\n",
+    "\n",
+    "# Function to evaluate the model and generate metrics\n",
+    "def evaluate_model(test_dir, model_path):\n",
+    "    test_gen = ImageDataGenerator(rescale=1.0 / 255).flow_from_directory(\n",
+    "        test_dir, target_size=input_shape[:2], batch_size=1, class_mode=\"categorical\", shuffle=False\n",
+    "    )\n",
+    "    model = keras.models.load_model(model_path)\n",
+    "    predictions = model.predict(test_gen)\n",
+    "    predicted_classes = np.argmax(predictions, axis=1)\n",
+    "    true_classes = test_gen.classes\n",
+    "    class_labels = list(test_gen.class_indices.keys())\n",
+    "\n",
+    "    accuracy = accuracy_score(true_classes, predicted_classes)\n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(true_classes, predicted_classes, average=\"weighted\")\n",
+    "    kappa = cohen_kappa_score(true_classes, predicted_classes)\n",
+    "    cm = confusion_matrix(true_classes, predicted_classes)\n",
+    "\n",
+    "    print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "    print(f\"Precision: {precision:.2f}\")\n",
+    "    print(f\"Recall: {recall:.2f}\")\n",
+    "    print(f\"F1 Score: {f1:.2f}\")\n",
+    "    print(f\"Cohen's Kappa: {kappa:.2f}\")\n",
+    "\n",
+    "    sns.heatmap(cm, annot=True, fmt=\"d\", xticklabels=class_labels, yticklabels=class_labels, cmap=\"Blues\")\n",
+    "    plt.title(\"Confusion Matrix\")\n",
+    "    plt.xlabel(\"Predicted\")\n",
+    "    plt.ylabel(\"True\")\n",
+    "    plt.savefig(\"confusion_matrix.png\")\n",
+    "    plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "77828887",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "train_vit() got multiple values for argument 'epochs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m model_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModels\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvit_model_2.h5\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Train Model\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[43mtrain_vit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_shape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Evaluate Model\u001b[39;00m\n\u001b[0;32m     17\u001b[0m class_indices \u001b[38;5;241m=\u001b[39m {i: class_name \u001b[38;5;28;01mfor\u001b[39;00m i, class_name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(os\u001b[38;5;241m.\u001b[39mlistdir(train_dir))}\n",
+      "\u001b[1;31mTypeError\u001b[0m: train_vit() got multiple values for argument 'epochs'"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    source_dataset_path = os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'images')\n",
+    "    destination_dataset_path = os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'ViT_data')\n",
+    "\n",
+    "    # Define Parameters\n",
+    "    input_shape = (224, 224, 3)\n",
+    "    train_dir = os.path.join(destination_dataset_path, 'train')\n",
+    "    test_dir = os.path.join(destination_dataset_path, 'val')\n",
+    "    num_classes = len(os.listdir(train_dir))\n",
+    "    model_path = os.path.join('..', 'Models', 'vit_model_2.h5')\n",
+    "\n",
+    "    # Train Model\n",
+    "    train_dir, test_dir, batch_size=32, epochs=10, model_path=\"vit_model.h5\"\n",
+    "    train_vit(train_dir, test_dir,  num_classes, epochs=100, model_path=model_path)\n",
+    "\n",
+    "    # Evaluate Model\n",
+    "    class_indices = {i: class_name for i, class_name in enumerate(os.listdir(train_dir))}\n",
+    "    evaluate_model(test_dir, model_path, input_shape, class_indices)\n",
+    "    \n",
+    "    # Predict Single Image\n",
+    "    class_indices = {i: class_name for i, class_name in enumerate(os.listdir(train_dir))}\n",
+    "    image_path = os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'ViT_data', 'test', 'Acadian_Flycatcher', \"Acadian_Flycatcher_0014_795607.jpg\") \n",
+    "    predict_single_image(image_path, model_path, input_shape, class_indices)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2a76eb",
+   "id": "ce4139a2",
    "metadata": {},
    "outputs": [],
    "source": []
