update jupyter notebook
update jupyter notebook

--- a/Zero_shot_Learning/Notebook/ZSL with Vision Transformer_20241230.ipynb
+++ b/Zero_shot_Learning/Notebook/ZSL with Vision Transformer_20241230.ipynb
@@ -1157,20 +1157,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3e2f36c",
+   "cell_type": "markdown",
+   "id": "a18bd65f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 20250117 - Use ViT Pre-train model\n",
+    "\n",
+    "[Using pre-trained Vision Transformer model and ResNet model as features extractors for image popularity prediction Link](https://medium.com/@james.sc.yan/using-pre-trained-vision-transformer-model-and-resnet-model-as-features-extractors-for-image-2292096e99a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "580fdd16",
+   "execution_count": 1,
+   "id": "85940373",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !pip install keras_cv -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "580fdd16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "Using TensorFlow backend\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ViTClassifier' from 'keras_cv.models' (C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras_cv\\api\\models\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m layers, Model\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras_cv\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ViTClassifier\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ViTClassifier' from 'keras_cv.models' (C:\\ProjectWork\\Basic_Python\\Zero_shot_Learning\\venv_zsl\\lib\\site-packages\\keras_cv\\api\\models\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, Model\n",
+    "from keras_cv.models import ViTClassifier\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "code",
@@ -1178,7 +1225,20 @@
    "id": "b02a469b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define dataset path and parameters\n",
+    "source_dataset_path = os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'images')\n",
+    "destination_dataset_path = os.path.join('..', 'Dataset', 'CUB_KMean_Dataset', 'ViT_data')\n",
+    "model_dir = os.path.join('..', 'Models_ViT')\n",
+    "checkpoint_file_name = \"checkpoint_ViT_epoch_{epoch:02d}_{accuracy:.4f}_{loss:.4f}_{val_accuracy:.4f}_{val_loss:.4f}_.h5\"\n",
+    "\n",
+    "dataset_dir = \"path/to/dataset\"\n",
+    "batch_size = 32\n",
+    "image_size = (224, 224)\n",
+    "num_classes = 101\n",
+    "learning_rate = 1e-4\n",
+    "epochs = 10"
+   ]
   },
   {
    "cell_type": "code",
