--- a/Neha Project/MiniProject Kidney Disease/Research/MiniProject Chronic_Kidney_Disease.ipynb
+++ b/Neha Project/MiniProject Kidney Disease/Research/MiniProject Chronic_Kidney_Disease.ipynb
@@ -896,7 +896,7 @@
    "execution_count": 10,
    "id": "d4239fef",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
